include/codata_constants_2018.h

ADD_IMPORT extern const double PLANCK_TEMPERATURE;/**< K */
ADD_IMPORT extern const double U_PLANCK_TEMPERATURE;/**< K */
ADD_IMPORT extern const double PLANCK_TIME;/**< s */
ADD_IMPORT extern const double U_PLANCK_TIME;/**< s */
ADD_IMPORT extern const double PROTON_CHARGE_TO_MASS_QUOTIENT;/**< C kg^-1 */
ADD_IMPORT extern const double U_PROTON_CHARGE_TO_MASS_QUOTIENT;/**< C kg^-1 */
ADD_IMPORT extern const double PROTON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_PROTON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double PROTON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double PROTON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_PROTON_G_FACTOR;/**<  */
ADD_IMPORT extern const double PROTON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_PROTON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double PROTON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_PROTON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double PROTON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_PROTON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double PROTON_MAG__SHIELDING_CORRECTION;/**<  */
ADD_IMPORT extern const double U_PROTON_MAG__SHIELDING_CORRECTION;/**<  */
ADD_IMPORT extern const double PROTON_MASS;/**< kg */
ADD_IMPORT extern const double U_PROTON_MASS;/**< kg */
ADD_IMPORT extern const double PROTON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_PROTON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double PROTON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_PROTON_MASS_IN_U;/**< u */
ADD_IMPORT extern const double PROTON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_PROTON_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double PROTON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_MUON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double PROTON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_NEUTRON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double PROTON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_NEUTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double PROTON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_PROTON_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double PROTON_RMS_CHARGE_RADIUS;/**< m */
ADD_IMPORT extern const double U_PROTON_RMS_CHARGE_RADIUS;/**< m */
ADD_IMPORT extern const double PROTON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_PROTON_TAU_MASS_RATIO;/**<  */
ADD_IMPORT extern const double QUANTUM_OF_CIRCULATION;/**< m^2 s^-1 */
ADD_IMPORT extern const double U_QUANTUM_OF_CIRCULATION;/**< m^2 s^-1 */
ADD_IMPORT extern const double QUANTUM_OF_CIRCULATION_TIMES_2;/**< m^2 s^-1 */
ADD_IMPORT extern const double U_QUANTUM_OF_CIRCULATION_TIMES_2;/**< m^2 s^-1 */
ADD_IMPORT extern const double REDUCED_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_REDUCED_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double REDUCED_MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_REDUCED_MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double REDUCED_NEUTRON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_REDUCED_NEUTRON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double REDUCED_PLANCK_CONSTANT;/**< J s */
ADD_IMPORT extern const double U_REDUCED_PLANCK_CONSTANT;/**< J s */
ADD_IMPORT extern const double REDUCED_PLANCK_CONSTANT_IN_EV_S;/**< eV s */
ADD_IMPORT extern const double U_REDUCED_PLANCK_CONSTANT_IN_EV_S;/**< eV s */
ADD_IMPORT extern const double REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM;/**< MeV fm */
ADD_IMPORT extern const double U_REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM;/**< MeV fm */
ADD_IMPORT extern const double REDUCED_PROTON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_REDUCED_PROTON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double REDUCED_TAU_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_REDUCED_TAU_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double RYDBERG_CONSTANT;/**< m^-1 */
ADD_IMPORT extern const double U_RYDBERG_CONSTANT;/**< m^-1 */
ADD_IMPORT extern const double RYDBERG_CONSTANT_TIMES_C_IN_HZ;/**< Hz */
ADD_IMPORT extern const double U_RYDBERG_CONSTANT_TIMES_C_IN_HZ;/**< Hz */
ADD_IMPORT extern const double RYDBERG_CONSTANT_TIMES_HC_IN_EV;/**< eV */
ADD_IMPORT extern const double U_RYDBERG_CONSTANT_TIMES_HC_IN_EV;/**< eV */
ADD_IMPORT extern const double RYDBERG_CONSTANT_TIMES_HC_IN_J;/**< J */
ADD_IMPORT extern const double U_RYDBERG_CONSTANT_TIMES_HC_IN_J;/**< J */
ADD_IMPORT extern const double SACKUR_TETRODE_CONSTANT__1_K__100_KPA;/**<  */
ADD_IMPORT extern const double U_SACKUR_TETRODE_CONSTANT__1_K__100_KPA;/**<  */
ADD_IMPORT extern const double SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA;/**<  */
ADD_IMPORT extern const double U_SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA;/**<  */
ADD_IMPORT extern const double SECOND_RADIATION_CONSTANT;/**< m K */
ADD_IMPORT extern const double U_SECOND_RADIATION_CONSTANT;/**< m K */
ADD_IMPORT extern const double SHIELDED_HELION_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_SHIELDED_HELION_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double SHIELDED_HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_SHIELDED_HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO;/**<  */
ADD_IMPORT extern const double SHIELDED_PROTON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double U_SHIELDED_PROTON_GYROMAG__RATIO;/**< s^-1 T^-1 */
ADD_IMPORT extern const double SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double U_SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T;/**< MHz T^-1 */
ADD_IMPORT extern const double SHIELDED_PROTON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_SHIELDED_PROTON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */