src/codata_.f90


real(c_double), protected, bind(C,name="PLANCK_TEMPERATURE") :: &
PLANCK_TEMPERATURE= !! 
real(c_double), protected, bind(C,name="U_PLANCK_TEMPERATURE") :: &
U_PLANCK_TEMPERATURE= !! 

real(c_double), protected, bind(C,name="PLANCK_TIME") :: &
PLANCK_TIME= !! 
real(c_double), protected, bind(C,name="U_PLANCK_TIME") :: &
U_PLANCK_TIME= !! 

real(c_double), protected, bind(C,name="PROTON_CHARGE_TO_MASS_QUOTIENT") :: &
PROTON_CHARGE_TO_MASS_QUOTIENT= !! 
real(c_double), protected, bind(C,name="U_PROTON_CHARGE_TO_MASS_QUOTIENT") :: &
U_PROTON_CHARGE_TO_MASS_QUOTIENT= !! 

real(c_double), protected, bind(C,name="PROTON_COMPTON_WAVELENGTH") :: &
PROTON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_PROTON_COMPTON_WAVELENGTH") :: &
U_PROTON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="PROTON_ELECTRON_MASS_RATIO") :: &
PROTON_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_ELECTRON_MASS_RATIO") :: &
U_PROTON_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_G_FACTOR") :: &
PROTON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_PROTON_G_FACTOR") :: &
U_PROTON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="PROTON_GYROMAG__RATIO") :: &
PROTON_GYROMAG__RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_GYROMAG__RATIO") :: &
U_PROTON_GYROMAG__RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_GYROMAG__RATIO_IN_MHZ_T") :: &
PROTON_GYROMAG__RATIO_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_PROTON_GYROMAG__RATIO_IN_MHZ_T") :: &
U_PROTON_GYROMAG__RATIO_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="PROTON_MAG__MOM") :: &
PROTON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_PROTON_MAG__MOM") :: &
U_PROTON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_PROTON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_MAG__SHIELDING_CORRECTION") :: &
PROTON_MAG__SHIELDING_CORRECTION= !! 
real(c_double), protected, bind(C,name="U_PROTON_MAG__SHIELDING_CORRECTION") :: &
U_PROTON_MAG__SHIELDING_CORRECTION= !! 

real(c_double), protected, bind(C,name="PROTON_MASS") :: &
PROTON_MASS= !! 
real(c_double), protected, bind(C,name="U_PROTON_MASS") :: &
U_PROTON_MASS= !! 

real(c_double), protected, bind(C,name="PROTON_MASS_ENERGY_EQUIVALENT") :: &
PROTON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_PROTON_MASS_ENERGY_EQUIVALENT") :: &
U_PROTON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_PROTON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="PROTON_MASS_IN_U") :: &
PROTON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_PROTON_MASS_IN_U") :: &
U_PROTON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="PROTON_MOLAR_MASS") :: &
PROTON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_PROTON_MOLAR_MASS") :: &
U_PROTON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="PROTON_MUON_MASS_RATIO") :: &
PROTON_MUON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_MUON_MASS_RATIO") :: &
U_PROTON_MUON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_NEUTRON_MAG__MOM__RATIO") :: &
PROTON_NEUTRON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_NEUTRON_MAG__MOM__RATIO") :: &
U_PROTON_NEUTRON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_NEUTRON_MASS_RATIO") :: &
PROTON_NEUTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_NEUTRON_MASS_RATIO") :: &
U_PROTON_NEUTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="PROTON_RELATIVE_ATOMIC_MASS") :: &
PROTON_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_PROTON_RELATIVE_ATOMIC_MASS") :: &
U_PROTON_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="PROTON_RMS_CHARGE_RADIUS") :: &
PROTON_RMS_CHARGE_RADIUS= !! 
real(c_double), protected, bind(C,name="U_PROTON_RMS_CHARGE_RADIUS") :: &
U_PROTON_RMS_CHARGE_RADIUS= !! 

real(c_double), protected, bind(C,name="PROTON_TAU_MASS_RATIO") :: &
PROTON_TAU_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_PROTON_TAU_MASS_RATIO") :: &
U_PROTON_TAU_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="QUANTUM_OF_CIRCULATION") :: &
QUANTUM_OF_CIRCULATION= !! 
real(c_double), protected, bind(C,name="U_QUANTUM_OF_CIRCULATION") :: &
U_QUANTUM_OF_CIRCULATION= !! 

real(c_double), protected, bind(C,name="QUANTUM_OF_CIRCULATION_TIMES_2") :: &
QUANTUM_OF_CIRCULATION_TIMES_2= !! 
real(c_double), protected, bind(C,name="U_QUANTUM_OF_CIRCULATION_TIMES_2") :: &
U_QUANTUM_OF_CIRCULATION_TIMES_2= !! 

real(c_double), protected, bind(C,name="REDUCED_COMPTON_WAVELENGTH") :: &
REDUCED_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_REDUCED_COMPTON_WAVELENGTH") :: &
U_REDUCED_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="REDUCED_MUON_COMPTON_WAVELENGTH") :: &
REDUCED_MUON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_REDUCED_MUON_COMPTON_WAVELENGTH") :: &
U_REDUCED_MUON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="REDUCED_NEUTRON_COMPTON_WAVELENGTH") :: &
REDUCED_NEUTRON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_REDUCED_NEUTRON_COMPTON_WAVELENGTH") :: &
U_REDUCED_NEUTRON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="REDUCED_PLANCK_CONSTANT") :: &
REDUCED_PLANCK_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_REDUCED_PLANCK_CONSTANT") :: &
U_REDUCED_PLANCK_CONSTANT= !! 

real(c_double), protected, bind(C,name="REDUCED_PLANCK_CONSTANT_IN_EV_S") :: &
REDUCED_PLANCK_CONSTANT_IN_EV_S= !! 
real(c_double), protected, bind(C,name="U_REDUCED_PLANCK_CONSTANT_IN_EV_S") :: &
U_REDUCED_PLANCK_CONSTANT_IN_EV_S= !! 

real(c_double), protected, bind(C,name="REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM") :: &
REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM= !! 
real(c_double), protected, bind(C,name="U_REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM") :: &
U_REDUCED_PLANCK_CONSTANT_TIMES_C_IN_MEV_FM= !! 

real(c_double), protected, bind(C,name="REDUCED_PROTON_COMPTON_WAVELENGTH") :: &
REDUCED_PROTON_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_REDUCED_PROTON_COMPTON_WAVELENGTH") :: &
U_REDUCED_PROTON_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="REDUCED_TAU_COMPTON_WAVELENGTH") :: &
REDUCED_TAU_COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_REDUCED_TAU_COMPTON_WAVELENGTH") :: &
U_REDUCED_TAU_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="RYDBERG_CONSTANT") :: &
RYDBERG_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_RYDBERG_CONSTANT") :: &
U_RYDBERG_CONSTANT= !! 

real(c_double), protected, bind(C,name="RYDBERG_CONSTANT_TIMES_C_IN_HZ") :: &
RYDBERG_CONSTANT_TIMES_C_IN_HZ= !! 
real(c_double), protected, bind(C,name="U_RYDBERG_CONSTANT_TIMES_C_IN_HZ") :: &
U_RYDBERG_CONSTANT_TIMES_C_IN_HZ= !! 

real(c_double), protected, bind(C,name="RYDBERG_CONSTANT_TIMES_HC_IN_EV") :: &
RYDBERG_CONSTANT_TIMES_HC_IN_EV= !! 
real(c_double), protected, bind(C,name="U_RYDBERG_CONSTANT_TIMES_HC_IN_EV") :: &
U_RYDBERG_CONSTANT_TIMES_HC_IN_EV= !! 

real(c_double), protected, bind(C,name="RYDBERG_CONSTANT_TIMES_HC_IN_J") :: &
RYDBERG_CONSTANT_TIMES_HC_IN_J= !! 
real(c_double), protected, bind(C,name="U_RYDBERG_CONSTANT_TIMES_HC_IN_J") :: &
U_RYDBERG_CONSTANT_TIMES_HC_IN_J= !! 

real(c_double), protected, bind(C,name="SACKUR_TETRODE_CONSTANT__1_K__100_KPA") :: &
SACKUR_TETRODE_CONSTANT__1_K__100_KPA= !! 
real(c_double), protected, bind(C,name="U_SACKUR_TETRODE_CONSTANT__1_K__100_KPA") :: &
U_SACKUR_TETRODE_CONSTANT__1_K__100_KPA= !! 

real(c_double), protected, bind(C,name="SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA") :: &
SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA= !! 
real(c_double), protected, bind(C,name="U_SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA") :: &
U_SACKUR_TETRODE_CONSTANT__1_K__101_325_KPA= !! 

real(c_double), protected, bind(C,name="SECOND_RADIATION_CONSTANT") :: &
SECOND_RADIATION_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_SECOND_RADIATION_CONSTANT") :: &
U_SECOND_RADIATION_CONSTANT= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_GYROMAG__RATIO") :: &
SHIELDED_HELION_GYROMAG__RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_GYROMAG__RATIO") :: &
U_SHIELDED_HELION_GYROMAG__RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T") :: &
SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T") :: &
U_SHIELDED_HELION_GYROMAG__RATIO_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_MAG__MOM") :: &
SHIELDED_HELION_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_MAG__MOM") :: &
U_SHIELDED_HELION_MAG__MOM= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_SHIELDED_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_SHIELDED_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO") :: &
SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO") :: &
U_SHIELDED_HELION_TO_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO") :: &
U_SHIELDED_HELION_TO_SHIELDED_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_PROTON_GYROMAG__RATIO") :: &
SHIELDED_PROTON_GYROMAG__RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_PROTON_GYROMAG__RATIO") :: &
U_SHIELDED_PROTON_GYROMAG__RATIO= !! 

real(c_double), protected, bind(C,name="SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T") :: &
SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T") :: &
U_SHIELDED_PROTON_GYROMAG__RATIO_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="SHIELDED_PROTON_MAG__MOM") :: &
SHIELDED_PROTON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_PROTON_MAG__MOM") :: &
U_SHIELDED_PROTON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_SHIELDED_PROTON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
